# freshdata

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_DOMAINS.md  LICENSE  MANIFEST.in  README.md  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: ci.yml  fetch-fixtures.yml  release.yml
api-reference/: index.html
benchmarks/: bench.py  index.html
cleaning-engine/: index.html
community/first-pr/: index.html
community/labels/: index.html
compliance/: index.html
contributing/: index.html
data-profiling/: index.html
docs/: api-reference.md  contributing.md  feature-overview.md  integrations.md
docs/community/: first-pr.md  labels.md
examples/: index.html
faq/: index.html
feature-overview/: index.html
installation/: index.html
integrations/: index.html
overrides/: main.html
quickstart/: index.html
scripts/: dataset_loader.py  debug_dataset_sweep.py  debug_datasets.py  fetch_online_fixtures.py  search_datasets.py
search/: search_index.json
src/freshdata/: __init__.py  _sentinels.py  _util.py  api.py  bridges.py  cleaner.py  config.py  duplicate_defense.py  explain.py  plan.py  profile.py  report.py  review.py  schema_drift.py
src/freshdata/adapters/: __init__.py  polars.py
src/freshdata/benchmarks/: RESULTS.md  __init__.py  _data_gen.py  _harness.py  run_benchmarks.py
src/freshdata/domains/: __init__.py  _common.py  base.py  registry.py
src/freshdata/domains/agriculture/: __init__.py  rules.yaml  validator.py
src/freshdata/domains/education/: __init__.py  rules.yaml  validator.py
src/freshdata/domains/finance/: __init__.py  rules.yaml  validator.py
src/freshdata/domains/healthcare/: __init__.py  validator.py
src/freshdata/domains/media/: __init__.py  rules.yaml  validator.py
src/freshdata/domains/transport/: rules.yaml  validator.py
src/freshdata/engine/: __init__.py  cache.py  context.py  missing.py  model_select.py  outliers.py  utils.py
src/freshdata/enterprise/: __init__.py  cleaner.py  cli.py  config.py  interface.py  lineage.py  metrics.py  polars_stub.py
src/freshdata/execution/: __init__.py  _base.py  _config.py  _lazy.py  _metadata.py  _plan.py  _report.py
src/freshdata/execution/backends/: __init__.py  _duckdb.py  _pandas.py  _polars.py
src/freshdata/integrations/: __init__.py  _core.py
src/freshdata/integrations/airflow/: __init__.py
src/freshdata/integrations/dagster/: __init__.py
src/freshdata/integrations/dbt/: __init__.py  cli.py
src/freshdata/steps/: __init__.py  columns.py  dtypes.py  duplicates.py  memory.py  missing.py  outliers.py  prune.py  strings.py
streaming/: index.html
tests/: conftest.py  expectations.py  golden_util.py  test_api.py  test_benchmark.py  test_columns.py  test_compare_matrix.py  test_config_tuple_coercion.py  test_config_tuple_fixtures.py  test_dtypes.py  test_engine_api.py  test_engine_duplicates.py  test_engine_missing.py  test_engine_outliers.py  test_enterprise_cleaner.py  test_enterprise_cli.py  test_enterprise_config.py  test_enterprise_interface.py  test_enterprise_lineage.py  test_enterprise_metrics.py  test_explain.py  test_golden.py  test_json_value.py  test_memory.py  test_missing.py  test_model_select.py  test_online_datasets.py  test_outliers.py  test_p1_bridges.py  test_p1_duplicate_review.py  test_p1_schema_drift.py  test_packaging.py  test_plan.py  test_polars_adapter.py  test_profile.py  test_properties.py  test_realworld.py  test_regressions.py  test_report.py  test_rows.py  (+1 more)
tests/domains/: conftest.py  test_agriculture.py  test_base_interface.py  test_education.py  test_finance.py  test_healthcare.py  test_media.py  test_registry.py  test_retail.py  test_spec_conformance.py  test_transport.py
tests/fixtures/: aqi_sample.csv  aqi_sample.expectations.json  duplicate_heavy.csv  duplicate_heavy.expectations.json  fraud_signals.csv  fraud_signals.expectations.json  large_panel.csv  large_panel.expectations.json  locale_numbers.csv  locale_numbers.expectations.json  mixed_roles.csv  mixed_roles.expectations.json  sales_export.csv  sensor_timeseries.csv  survey_responses.csv  survey_responses.expectations.json  tiny_cohort.csv  tiny_cohort.expectations.json  wide_sparse.csv
tests/fixtures/golden/: aqi_sample.balanced.report.json  duplicate_heavy.balanced.report.json  fraud_signals.balanced.report.json  large_panel.balanced.report.json  locale_numbers.balanced.report.json  mixed_roles.balanced.report.json  sales_export.balanced.report.json  sensor_timeseries.balanced.report.json  survey_responses.balanced.report.json  tiny_cohort.balanced.report.json  wide_sparse.balanced.report.json
tests/fixtures/online/: adult_income.expectations.json  air_quality_uci.expectations.json  bank_marketing.expectations.json  heart_cleveland.expectations.json  ionosphere.expectations.json  iris.expectations.json  loan_approval.expectations.json  manifest.json  mushroom.expectations.json  registry.json  titanic.expectations.json  weather_json.expectations.json  wine_quality.expectations.json
tests/fixtures/online/cache/: abalone.csv  adult_income.csv  air_quality_uci.csv  bank_marketing.csv  co2_owid.csv  covid_owid.csv  credit_german.csv  diamonds.csv  energy_owid.csv  flags.csv  glass.csv  hepatitis.csv  horse_colic.csv  house_sales.csv  image_segmentation.csv  landsat.csv  letter_recognition.csv  loan_approval.csv  lymphography.csv  movies_json.csv  mushroom.csv  spambase.csv  tae.csv  telco_churn.csv  vehicle.csv  vowel.csv  weather_json.csv  yeast.csv  zoo.csv
tests/fixtures/online/golden/: adult_income.balanced.report.json  air_quality_uci.balanced.report.json  iris.balanced.report.json  (+7 more)
tests/fixtures/perf/: baselines.json
tests/test_execution/: conftest.py  test_action_parity.py  test_benchmarks.py  test_cli_and_formats.py  test_duckdb_engine.py  test_engine_selector.py  test_metadata_scanner.py  test_pandas_engine.py  test_plan_generator.py  test_polars_engine.py
tests/test_integrations/: conftest.py  test_airflow.py  test_core.py  test_dagster.py  test_dbt.py  test_imports.py
(+26 files in other folders)
