[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "freshdata-cleaner"
version = "1.0.0"
description = "Fast, safe, automatic data cleaning for real-world tabular data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Johnny Wilson Dougherty", email = "johnnydougherty09@gmail.com" },
]
keywords = [
    "data-cleaning",
    "data-quality",
    "pandas",
    "preprocessing",
    "data-preprocessing",
    "machine-learning",
    "feature-engineering",
    "missing-values",
    "outlier-detection",
    "data-profiling",
    "eda",
    "automation",
    "data-science",
    "etl",
    "tabular-data",
    "dataframe",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0",
]
polars = [
    "polars>=0.20",
]
pyarrow = [
    "pyarrow>=10",
]
semantic = [
    "requests>=2.20",
]
cli = [
    "pyyaml>=5.1",
]
# Domain validator packs (finance/retail/transport) read their rules from YAML.
domains = [
    "pyyaml>=5.1",
]
cleanlab = [
    "cleanlab>=2.0",
    "scikit-learn>=1.0",
]
# Everything needed for the enterprise layer (clustering, masking, lineage, CLI),
# excluding the heavier ML label-noise extra (`cleanlab`).
enterprise = [
    "polars>=0.20",
    "pyarrow>=10",
    "scikit-learn>=1.0",
    "requests>=2.20",
    "pyyaml>=5.1",
]
all = [
    "polars>=0.20",
    "pyarrow>=10",
    "scikit-learn>=1.0",
    "requests>=2.20",
    "pyyaml>=5.1",
    "cleanlab>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "pre-commit>=3.0",
    "polars>=0.20",
    "pyarrow>=10",
    "requests>=2.20",
    "pyyaml>=5.1",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
]

[project.scripts]
freshdata = "freshdata.enterprise.cli:main"

# Built-in domain packs are also exposed here so third-party packs can register
# the same way (the registry resolves built-ins directly and does not require
# this entry to be installed).
[project.entry-points."freshdata.domains"]
finance = "freshdata.domains.finance:FinanceValidator"
retail = "freshdata.domains.retail:RetailValidator"
transport = "freshdata.domains.transport:TransportValidator"
healthcare = "freshdata.domains.healthcare:HealthcareValidator"
education = "freshdata.domains.education:EducationValidator"
agriculture = "freshdata.domains.agriculture:AgricultureValidator"
media = "freshdata.domains.media:MediaValidator"

[project.urls]
Homepage = "https://freshcode-org.github.io/freshdata/"
Documentation = "https://freshcode-org.github.io/freshdata/"
Repository = "https://github.com/FreshCode-Org/freshdata"
Issues = "https://github.com/FreshCode-Org/freshdata/issues"
Changelog = "https://github.com/FreshCode-Org/freshdata/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/FreshCode-Org/freshdata/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/freshdata"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "SECURITY.md",
    "RELEASE.md",
    "CONTRIBUTING.md",
    "CONTRIBUTING_DOMAINS.md",
    "CODE_OF_CONDUCT.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=freshdata --cov-report=term-missing --cov-fail-under=93"
xfail_strict = true
markers = [
    "large: optional large-file benchmarks (set FRESHDATA_AQI_PATH)",
    "online: live download from manifest URLs (requires network)",
    "tier1: anchor online datasets with full golden expectations",
]
filterwarnings = [
    # Treat freshdata-emitted warnings as test failures (plan: zero-warning bar).
    "error::DeprecationWarning:freshdata",
    "error::UserWarning:freshdata",
    # sklearn KNNImputer can warn on collinear numeric partners; freshdata
    # suppresses these during imputation, but keep pytest output clean too.
    "ignore:divide by zero encountered in matmul:RuntimeWarning:sklearn.utils.extmath",
    "ignore:overflow encountered in matmul:RuntimeWarning:sklearn.utils.extmath",
    "ignore:invalid value encountered in matmul:RuntimeWarning:sklearn.utils.extmath",
]

[tool.coverage.run]
source = ["freshdata"]
branch = false

[tool.coverage.report]
fail_under = 93
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 99
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RET", "PL"]
ignore = [
    "PLR0911", # too many returns — dtype heuristics are naturally branchy
    "PLR0912", # too many branches — cleaning steps are naturally branchy
    "PLR0913", # many keyword options is the point of the config surface
    "PLR2004", # magic-value comparisons in heuristics are documented inline
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "SIM117"]
"src/freshdata/engine/model_select.py" = ["PLR0915"]
"src/freshdata/engine/outliers.py" = ["PLR0915"]
"src/freshdata/adapters/polars.py" = ["PLC0415", "PLW0603"]
"scripts/debug_datasets.py" = ["PLR0915"]
# Enterprise layer: lazy optional imports (PLC0415) keep `import freshdata` cheap;
# the orchestration functions are intentionally long (PLR0915).
"src/freshdata/enterprise/cleaner.py" = ["PLC0415", "PLR0915", "PLW2901"]
"src/freshdata/enterprise/interface.py" = ["PLC0415"]
"src/freshdata/enterprise/cli.py" = ["PLC0415", "PLR0915"]
"src/freshdata/__init__.py" = ["PLC0415"]
# Domain packs defer the PyYAML import so the base infra stays dependency-free.
"src/freshdata/domains/base.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
follow_imports = "silent"
files = ["src/freshdata"]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "sklearn.*", "polars.*", "requests.*", "cleanlab.*", "yaml.*"]
ignore_missing_imports = true
